--- a/data/users.yml
+++ b/data/users.yml
@@ -1,4 +1,6 @@
-- name: 'Sébastien Saunier'
-  github_nickname: 'ssaunier'
-- name: 'Boris Paillard'
-  github_nickname: 'Papillard'
+- name: 'Romain Loeuillet'
+  github_nickname: 'romainloeuillet'
+
+- name: 'Juliette Crouzet'
+  github_nickname: 'JulietteCrouzet'
+
